segundo commit (ajustes y cambios)

--- a/src/templates/audit_panel.html
+++ b/src/templates/audit_panel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audit Panel</title>
+    <title>WiFi Audit Panel</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/no_fa.png') }}">
     <!-- JavaScript -->
@@ -25,7 +25,7 @@
                 <option value="" disabled selected>Selecciona una interfaz</option>
             </select>
             <div class="actions">
-                <button id="scanWifiButton">Escanear Redes WiFi</button>
+                <button id="scanNetworksButton">Escanear Redes WiFi</button>
             </div>
         </section>
 
