--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="/audit_panel">Audit Panel</a></li>
             <li><a href="/monitor_mode">Monitor Mode</a></li>
+            <li><a href="/cli">CLI</a></li> <!-- Nueva opción añadida -->
         </ul>
     </nav>
 
